<resources>
    <string name="app_name">Assignment Week 11 BY 201714033</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Assignment Week 11</string>
    <string name="nav_header_subtitle">94abrar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_accelerometer">Accelerometer</string>
    <string name="menu_gyroscope">Gyroscope</string>
    <string name="menu_proximity">Proximity</string>
    <string name="menu_shake">Shake</string>
    <string name="menu_map">Map</string>
    <string name="menu_retrieve">Retrieve</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="satellite_map">Satellite</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <string name="google_maps_key">AIzaSyB9JtjEvRebh0XgNgsg35ud9SCeeAF</string>
</resources>
